# PyNumTools

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  README.md  pyproject.toml  setup.py
conda.recipe/: meta.yaml  run_test.bat  run_test.py  run_test.sh
cpp/: binding.cpp  kmc.cpp  kmc.h  lgmres.cpp  lgmres.h  quadrature.cpp  quadrature.h  util.h
cpp/kmc/: kmc_binding.cpp
pynumtools/: CMakeLists.txt  finite_differences.py  lgmres.py  quadrature.py  tv_derivative.py  util.py
pynumtools/kmc/: CMakeLists.txt  __init__.py  kinetic_monte_carlo.py  logutil.py
pynumtools/kmc/test/: test_kmc.py  test_schloegel.py
pynumtools/test/: test_finite_differences.py  test_lgmres.py  test_sanity.py
tools/: upload_conda_package.sh
